[package]
name = "uno-multiplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bunt = "0.2.8"
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
strum = { version = "0.24.1" }
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
