[package]
name = "runo"
version = "0.1.0"
edition = "2021"
authors = ["Jyotirmay Shelly <jyotirmay.shelly@gmail.com>"]
description = "Play Uno on the terminal over the internet with your friends!"
repository = "https://github.com/StaticESC/Runo"
license = "MIT"
keywords = ["game", "card"]
categories = ["games"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bunt = "0.2.8"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
colored = "2.0.1"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
strum = { version = "0.24.1" }
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
